package com.orbanszlrd.quizapi.user;

public enum Gender {
    MALE,
    FEMALE,
}
